:pencil2: feat: toList()로 피드백 반영