@@ -3,7 +3,6 @@ package com.ohgood.newstocks.notice.dto;
 import com.ohgood.newstocks.notice.entity.Notice;
 import com.ohgood.newstocks.notice.mapper.NoticeMapper;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Data;
 
 @Data
@@ -19,6 +18,6 @@ public class NoticeDto {
             .stream()
             .filter(noticeImage -> !noticeImage.getDeleted()) // deleted가 false인 것만 필터링
             .map(NoticeMapper.INSTANCE::entityToNoticeImageDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
